--- a/example/index.html
+++ b/example/index.html
@@ -38,9 +38,6 @@
               Add Items
               <span class="glyphicon glyphicon-chevron-right pull-right"></span>
             </a></li>
-            <li><a id="item_params" href="#">
-              Show Item Params
-            </a></li>
           </ul>
           <hr />
 
@@ -87,11 +84,16 @@
                     <label class="col-sm-5 control-label">
                       Position 
                     </label>
-                    <div class="col-sm-6" id="item-position">
-                      
-                      <!-- <input type="number" class="form-control" id="item-position"> -->
+                    <div class="col-sm-6">
+                      <input type="number" class="form-control" id="item-position-x">
+                      <input type="number" class="form-control" id="item-position-y">
+                      <input type="number" class="form-control" id="item-position-z">
                     </div>
                   </div>
+                  <!-- <div class="form-group">
+                    <button id="change-position"> Change position</button>
+                  </div>
+                  </div> -->
                 </div>
                 <small><span class="text-muted">Measurements in inches.</span></small>
               </div>
@@ -158,6 +160,9 @@
               <a class="btn btn-sm btn-default btn-file">
                <input type="file" class="hidden-input" id="loadFile">
                Load Plan
+              </a>
+              <a href="#"class="btn btn-sm btn-default btn-sm" id="optimize">
+                Optimize
               </a>
             </div>
 
